--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,17 +1,22 @@
 annotated-types==0.7.0
 anyio==4.11.0
+bcrypt==4.2.1
 click==8.3.0
 colorama==0.4.6
 dnspython==2.8.0
+email-validator==2.2.0
 fastapi==0.119.1
 h11==0.16.0
 httptools==0.7.1
 idna==3.11
 motor==3.7.1
+passlib==1.7.4
 pydantic==2.12.3
 pydantic_core==2.41.4
 pymongo==4.15.3
 python-dotenv==1.1.1
+python-jose[cryptography]==3.3.0
+python-multipart==0.0.20
 PyYAML==6.0.3
 sniffio==1.3.1
 starlette==0.48.0
